implement strategy for playing